--- a/hanzi-grouper/app/src/main/AndroidManifest.xml
+++ b/hanzi-grouper/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".CharacterActivity"
+            android:label="@string/title_activity_character"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".GroupActivity"
             android:label="@string/title_activity_group"
             android:parentActivityName=".MainActivity"
